# af_analysis

./: .bumpversion.toml  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  azure-pipelines.yml  basic_example_colab.ipynb  environment.yml  example.ipynb  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/paper/: paper.bib  paper.md
docs/paper/jats/: paper.jats
docs/source/: af_analysis.format.rst  af_analysis.rst  af_analysis.test.rst  af_analysis_gui.rst  analysis.rst  conf.py  contributing.md  index.rst  installation.md  logo_prompt.txt  modules.rst
docs/source/_static/: dimer.html
docs/source/notebooks/: basic_example.ipynb
src/af_analysis/: __init__.py  analysis.py  clustering.py  data.py  docking.py  plot.py
src/af_analysis/format/: __init__.py  af3_local.py  af3_webserver.py  afpulldown.py  boltz1.py  chai1.py  chai1_custom.py  colabfold_1_5.py  default.py  massivefold.py
src/af_analysis/test/: test_analysis.py  test_data.py  test_docking.py  test_format.py  test_sequence.py
src/af_analysis/test/inputs/chai1_prot_dna_ligand/: pred.model_idx_0.cif  pred.model_idx_2.cif  pred.model_idx_3.cif  (+3 more)
src/af_analysis_gui/: README.md  __init__.py  __main__.py  app.py  flask_app.py  test.py
src/af_analysis_gui/static/css/: app.css
src/af_analysis_gui/static/js/: api.js  main.js  molstar.js  plot.js  resize.js  table.js
src/af_analysis_gui/templates/: flask_index.html
tests/: __init__.py  conftest.py  test_analysis.py  test_clustering.py  test_data.py  test_docking.py  test_format.py
tests/inputs/af3_local_prot_pep_complex/6zn2_a_b_no_peptide_msa_can/: 6zn2_a_b_no_peptide_msa_can_summary_confidences.json  ranking_scores.csv
tests/inputs/af3_local_prot_pep_complex/7adt_a_u_no_peptide_msa_can/: 7adt_a_u_no_peptide_msa_can_confidences.json  7adt_a_u_no_peptide_msa_can_model.cif  7adt_a_u_no_peptide_msa_can_summary_confidences.json  ranking_scores.csv
tests/inputs/chai1_prot_dna_ligand/: pred.model_idx_1.cif  scores.model_idx_0.npz  scores.model_idx_1.npz  scores.model_idx_3.npz
tests/inputs/chai1_webserver_prot_dna_ligand/: pae.rank_1.npy  pae.rank_2.npy  pae.rank_3.npy  pae.rank_4.npy  pred.rank_2.cif  pred.rank_3.cif  scores.rank_0.json  scores.rank_3.json  scores.rank_4.json
tests/inputs/fold_test_protein_arn_atp_mn/: fold_test_protein_arn_atp_mn_full_data_0.json  fold_test_protein_arn_atp_mn_full_data_1.json  fold_test_protein_arn_atp_mn_full_data_2.json  fold_test_protein_arn_atp_mn_full_data_3.json  fold_test_protein_arn_atp_mn_full_data_4.json  fold_test_protein_arn_atp_mn_job_request.json  fold_test_protein_arn_atp_mn_model_0.cif  fold_test_protein_arn_atp_mn_model_1.cif  fold_test_protein_arn_atp_mn_model_2.cif  fold_test_protein_arn_atp_mn_model_3.cif  fold_test_protein_arn_atp_mn_model_4.cif  fold_test_protein_arn_atp_mn_summary_confidences_0.json  fold_test_protein_arn_atp_mn_summary_confidences_1.json  fold_test_protein_arn_atp_mn_summary_confidences_2.json  fold_test_protein_arn_atp_mn_summary_confidences_3.json  fold_test_protein_arn_atp_mn_summary_confidences_4.json
tests/inputs/fold_test_protein_arn_atp_mn/msas/: fold_test_protein_arn_atp_mn_unpaired_msa_chains_a.a3m
(+61 files in other folders)
