[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "af-analysis"
version = "0.1.4"
dynamic = ["readme", "dependencies"]
description = "`AF analysis` is a python library allowing analysis of Alphafold results."
license = {text = " GPL-2.0"}
requires-python = ">=3.8"
authors = [
    { name = "Samuel Murail", email = "samuel.murail@u-paris.fr" },
]
keywords = [
    "AlphaFold2",
    "ColabFold",
    "Python",
    "af_analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]

[project.scripts]
af_analysis = "af_analysis.__main__:main"

[project.urls]
Homepage = "https://github.com/samuelmurail/af_analysis"

[tool.setuptools.dynamic]
# version = {attr = "af_analysis.VERSION"}
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}