[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "af-analysis"
version = "0.2.0"
dynamic = ["dependencies"]
description = "`AF analysis` is a python library allowing analysis of Alphafold results."
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = " GPL-2.0"}
requires-python = ">=3.8"
authors = [
    { name = "Samuel Murail", email = "samuel.murail@u-paris.fr" },
]
keywords = [
    "AlphaFold2",
    "ColabFold",
    "Python",
    "af_analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]

[tool.setuptools.package-data]
af_analysis_gui = [
    "templates/*",
    "static/css/*",
    "static/img/*",
    "static/js/*",
]

[project.scripts]
af_analysis = "af_analysis.__main__:main"
af_analysis_gui = "af_analysis_gui.__main__:main_cli"

[project.optional-dependencies]
gui = [
    "plotly>=5.0",
    "flask>=2.3",
]

[project.urls]
Homepage = "https://github.com/samuelmurail/af_analysis"

[tool.setuptools.dynamic]
# version = {attr = "af_analysis.VERSION"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]